--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@3.8.0/dist/chart.min.js"></script>
+        <script src="/static/socket.io.js"></script>
+        <script src="/static/chart.js"></script>
     </head>
 
     <body>
         <canvas id="myChart" width="400" height="400"></canvas>
     </body>
 
-    <script src="http://localhost:5000/static/index.js"></script>
+    <script src="/static/index.js"></script>
 </html>
